# bevy_game_template

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  flake.nix  index.html
.github/workflows/: release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: lib.rs  main.rs
