[package]
name = "mobile"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
{{crate_name}} = { path = ".." }
bevy = { version = "0.19", default-features = false, features = ["android-native-activity"] }

[target."cfg(target_os = \"ios\")".dependencies]
objc2-avf-audio = { version = "0.3.0", features = [
    "AVAudioSession",
    "AVAudioSessionTypes",
] }

[package.metadata.android]
package = "{{reverse_domain}}.{{ crate_name | replace: "_", "" }}"
apk_name = "{{ crate_name | pascal_case }}"  # same as GAME_OSX_APP_NAME in the release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 35

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "{{game_name}}"
